tmux | fixed splitting direction

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,5 +3,7 @@ unbind-key "
 unbind-key s
 unbind-key v
 
-bind-key s split-window -h
-bind-key v split-window
+bind-key s split-window
+bind-key v split-window -h
+
+set -g default-terminal "xterm"
