--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,4 +6,4 @@ unbind-key v
 bind-key s split-window
 bind-key v split-window -h
 
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+setw -g mode-mouse on
