--- a/terminator/config
+++ b/terminator/config
@@ -4,10 +4,50 @@
   title_font = DejaVu Sans Mono 14
   title_use_system_font = False
 [keybindings]
+  broadcast_all = None
+  broadcast_group = None
+  broadcast_off = None
+  cycle_next = None
+  cycle_prev = None
+  edit_tab_title = None
+  edit_terminal_title = None
+  edit_window_title = None
+  full_screen = None
+  go_down = None
+  go_left = None
+  go_next = None
+  go_prev = None
+  go_right = None
+  go_up = None
+  group_all = None
+  group_tab = None
+  help = None
+  hide_window = None
+  insert_number = None
+  insert_padded = None
+  layout_launcher = None
+  new_window = None
+  prev_tab = None
+  reset_clear = None
+  resize_down = None
+  resize_left = None
+  resize_right = None
+  resize_up = None
+  rotate_ccw = None
+  rotate_cw = None
+  scaled_zoom = None
+  search = <Primary><Shift>f
+  split_horiz = None
+  split_vert = None
+  toggle_scrollbar = None
+  toggle_zoom = None
+  ungroup_all = None
+  ungroup_tab = None
 [layouts]
   [[default]]
     [[[child1]]]
       parent = window0
+      profile = default
       type = Terminal
     [[[window0]]]
       parent = ""
@@ -18,6 +58,7 @@
     background_darkness = 0.6
     background_type = transparent
     cursor_color = "#aaaaaa"
+    delete_binding = automatic
     font = DejaVu Sans Mono 18
     foreground_color = "#ffffff"
     icon_bell = False
