--- a/polybar/config
+++ b/polybar/config
@@ -139,19 +139,33 @@ label-separator = " - "
 
 menu-0-0 = Terminate WM
 menu-0-0-exec = bspc quit -1
-menu-0-1 = Reboot
+menu-0-1 = Suspend
 menu-0-1-exec = menu-open-1
-menu-0-2 = Power off
+menu-0-2 = Hibernate
 menu-0-2-exec = menu-open-2
-
-menu-1-0 = Cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = Reboot
-menu-1-1-exec = sudo reboot
+menu-0-3 = Reboot
+menu-0-4-exec = menu-open-3
+menu-0-4 = Power off
+menu-0-4-exec = menu-open-4
 
 menu-2-0 = Cancel
 menu-2-0-exec = menu-open-0
-menu-2-1 = Power off
-menu-2-1-exec = sudo poweroff
+menu-2-1 = Suspend
+menu-2-1-exec = systemctl suspend
+
+menu-2-0 = Cancel
+menu-2-0-exec = menu-open-0
+menu-2-1 = Hibernate
+menu-2-1-exec = systemctl hibernate
+
+menu-3-0 = Cancel
+menu-3-0-exec = menu-open-0
+menu-3-1 = Reboot
+menu-3-1-exec = sudo reboot
+
+menu-4-0 = Cancel
+menu-4-0-exec = menu-open-0
+menu-4-1 = Power off
+menu-4-1-exec = sudo poweroff
 
 ; vim:ft=dosini
