--- a/i3/config
+++ b/i3/config
@@ -57,7 +57,7 @@ bindsym $mod+backslash exec i3lock -c 000000
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+slash exec rofi -show run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
