i3 | rebind kill and update xautlock

--- a/i3/config
+++ b/i3/config
@@ -54,7 +54,7 @@ bindsym $mod+Return exec terminator
 bindsym $mod+backslash exec i3lock -c 000000
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+slash exec rofi -show run
@@ -203,5 +203,5 @@ bindsym $mod+r mode "resize"
 exec --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id compton --config $HOME/.config/compton.conf -b
-exec --no-startup-id xautolock -detectsleep -time 10 -locker 'i3lock -c 000000'
+exec --no-startup-id xautolock -detectsleep -time 5 -locker 'i3lock -c 000000' -killtime 15 -killer 'systemctl suspend'
 exec --no-startup-id nm-applet
