i3 | using i3-blur instead

--- a/i3/config
+++ b/i3/config
@@ -51,7 +51,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec terminator
-bindsym $mod+backslash exec i3lock -c 000000
+bindsym $mod+backslash exec i3lock -f
 
 # kill focused window
 bindsym $mod+q kill
@@ -203,5 +203,5 @@ bindsym $mod+r mode "resize"
 exec --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id compton --config $HOME/.config/compton.conf -b
-exec --no-startup-id xautolock -detectsleep -time 5 -locker 'i3lock -c 000000' -killtime 15 -killer 'systemctl suspend'
+exec --no-startup-id xautolock -detectsleep -time 7 -locker 'i3lock -f' -killtime 15 -killer 'systemctl suspend'
 exec --no-startup-id nm-applet
