--- a/polybar/config
+++ b/polybar/config
@@ -133,7 +133,7 @@ full-at = 99
 time-format = %H:%M
 poll-internal = 50
 
-format-charging = <ramp-capacity> <label-charging>
+format-charging =  <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
 format-full = <ramp-capacity> <label-full>
 
