--- a/i3/config
+++ b/i3/config
@@ -28,7 +28,7 @@ font pango:DejaVu Sans Mono 10
 no_focus [window_role="pop-up"]
 
 bindsym Print exec scrot -q 100 ~/screenshots/%Y-%m-%d-%T-screenshot.png
-bindsym Ctrl+Print exec scrot -q 100 -s ~/screenshots/%Y-%m-%d-%T-screenshot.png
+bindsym --release Ctrl+Print exec scrot -q 100 -s ~/screenshots/%Y-%m-%d-%T-screenshot.png
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
@@ -133,9 +133,6 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
-
 # gaps
 set $mode_gaps Gaps: (o) outer, (i) inner
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
@@ -177,6 +174,9 @@ mode "$mode_gaps_outer" {
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
+# reload the configuration file
+bindsym $mod+Shift+c reload
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
