--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -16,10 +16,12 @@ shadow-offset-y = -15; # The top offset for shadows. (default -15)
 shadow-opacity = 0.5;
 menu-opacity = 1;
 shadow-exclude = [
+	"class_g = 'slop'"
 ];
 
 blur-background-exclude = [
 	"name = 'gnome-screenshot'",
+	"class_g = 'slop'",
 	"class_g ?= 'gnome-screenshot'"
 ];
 
