--- a/zsh/.zpreztorc
+++ b/zsh/.zpreztorc
@@ -68,6 +68,7 @@ zstyle ':prezto:module:git:info:context:subcontext' format 'string'
 
 # Set the command prefix on non-GNU systems.
 zstyle ':prezto:module:gnu-utility' prefix 'g'
+zstyle ':prezto:module:utility' safe-ops 'no'
 
 #
 # History Substring Search
