--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -2,49 +2,45 @@ backend = "glx";
 glx-no-stencil = true;
 glx-copy-from-front = false;
 glx-swap-method = 1;
-blur-background = true;
+blur-background = false;
 blur-kern = "7x7box";
-
-# Shadow
-shadow = true; # Enabled client-side shadows on windows.
-no-dock-shadow = true; # Avoid drawing shadows on dock/panel windows.
-no-dnd-shadow = true; # Don't draw shadows on DND windows.
-clear-shadow = true; # Zero the part of the shadow's mask behind the window (experimental).
-shadow-radius = 10; # The blur radius for shadows. (default 12)
-shadow-offset-x = -15; # The left offset for shadows. (default -15)
-shadow-offset-y = -15; # The top offset for shadows. (default -15)
+shadow = true;
+no-dock-shadow = true;
+no-dnd-shadow = true;
+clear-shadow = true;
+shadow-radius = 10;
+shadow-offset-x = -15;
+shadow-offset-y = -15;
 shadow-opacity = 0.5;
 menu-opacity = 1;
-shadow-exclude = [
-	"class_g = 'slop'"
-];
-
-blur-background-exclude = [
-	"name = 'gnome-screenshot'",
-	"class_g = 'slop'",
-	"class_g ?= 'gnome-screenshot'"
-];
-
-#opacity-rule = ["85:class_g = 'gnome-terminal'"];
-
-# The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
-# (most applications are fine, only apps that do weird things with xshapes or argb are affected).
-# This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
-
-# Fading
-fading = true; # Fade windows during opacity changes.
-fade-delta = 4; # The time between steps in a fade in milliseconds. (default 10).
-fade-in-step = 0.03; # Opacity change between steps while fading in. (default 0.028).
-fade-out-step = 0.03; # Opacity change between steps while fading out. (default 0.03).
-no-fading-openclose = false; # Fade windows in/out when opening/closing
-
-detect-client-opacity = true; # This prevents opacity being ignored for some apps. For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
-
-#Window type settings
-wintypes:
+shadow-exclude = [ "class_g = 'slop'" ];
+blur-background-exclude = [ "name = 'gnome-screenshot'", "class_g = 'slop'", "class_g ?= 'gnome-screenshot'" ];
+fading = false;
+fade-delta = 4;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
+no-fading-openclose = false;
+detect-client-opacity = true;
+wintypes : 
 {
-	tooltip = { fade = true; shadow = false; };
-	menu = { shadow = false; };
-	dropdown_menu = { shadow = false; };
-	popup_menu =  { shadow = false; };
+  tooltip : 
+  {
+    fade = true;
+    shadow = false;
+  };
+  menu : 
+  {
+    shadow = false;
+  };
+  dropdown_menu : 
+  {
+    shadow = false;
+  };
+  popup_menu : 
+  {
+    shadow = false;
+  };
 };
+active-opacity = 1.;
+inactive-opacity = 1.;
+shadow-ignore-shaped = false;
