--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,34 @@
+set -g prefix C-a
+bind C-a send-prefix
+unbind C-b
+
+set-window-option -g mode-keys vi
+
 unbind-key s
 unbind-key v
 
 bind-key s split-window
 bind-key v split-window -h
 
-setw -g mode-mouse on
+bind -r C-k resize-pane -U
+bind -r C-j resize-pane -D
+bind -r C-h resize-pane -L
+bind -r C-l resize-pane -R
+
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+# and now unbind keys
+unbind Up
+unbind Down
+unbind Left
+unbind Right
+
+unbind C-Up
+unbind C-Down
+unbind C-Left
+unbind C-Right
+
+#setw -g mode-mouse on
