--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,12 +3,23 @@ bind C-a send-prefix
 unbind C-b
 
 set-window-option -g mode-keys vi
+set -sg escape-time 0
 
 unbind-key s
 unbind-key v
 
 bind-key s split-window
 bind-key v split-window -h
+
+unbind Up
+unbind Down
+unbind Left
+unbind Right
+
+unbind C-Up
+unbind C-Down
+unbind C-Left
+unbind C-Right
 
 bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
@@ -19,16 +30,5 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-
-# and now unbind keys
-unbind Up
-unbind Down
-unbind Left
-unbind Right
-
-unbind C-Up
-unbind C-Down
-unbind C-Left
-unbind C-Right
 
 #setw -g mode-mouse on
