--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,9 @@ set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
 
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 set-window-option -g mode-keys vi
 set -sg escape-time 0
 
