--- a/systemd/libinput-gestures@.service
+++ b/systemd/libinput-gestures@.service
@@ -3,8 +3,9 @@ Description=Enable libinput gestures
 
 [Service]
 User=%i
-Type=oneshot
-ExecStart=/usr/bin/libinput-gestures-setup status
+Type=simple
+Environment=DISPLAY=:0
+ExecStart=/usr/bin/python3 /usr/bin/libinput-gestures
 
 [Install]
 WantedBy=multi-user.target
