--- a/systemd/auto-lock@.service
+++ b/systemd/auto-lock@.service
@@ -6,8 +6,7 @@ Before=sleep.target
 User=%i
 Type=simple
 Environment=DISPLAY=:0
-ExecStart=/usr/bin/slock
-ExecStartPost=/usr/bin/sleep 1
+ExecStart=i3lock -f -e -r 0 -s 8
 
 [Install]
 WantedBy=sleep.target
