--- a/i3/config
+++ b/i3/config
@@ -54,7 +54,7 @@ floating_modifier $mod
 bindsym $mod+Return exec terminator
 bindsym $mod+backslash exec i3lock --nofork \
 	--ignore-empty-password \
-	--image='/home/junwoo/gdrive/Graphics/Wallpapers/Computer/dac44845 [7024x4683].jpg' \
+	--image='/home/junwoo/gdrive/Graphics/Wallpapers/Computer/dac44845 [7024x4683].png' \
 	--keyhlcolor=3498DBFF \
 	--bshlcolor=95A5A6FF \
 	--insidecolor=00000000 \
@@ -222,7 +222,7 @@ exec --no-startup-id nitrogen --restore
 exec --no-startup-id compton --config $HOME/.config/compton.conf -b
 exec --no-startup-id xautolock -detectsleep -time 7 -killtime 15 -killer 'systemctl suspend' -locker "i3lock --nofork \
 	--ignore-empty-password \
-	--image='/home/junwoo/gdrive/Graphics/Wallpapers/Computer/dac44845 [7024x4683].jpg' \
+	--image='/home/junwoo/gdrive/Graphics/Wallpapers/Computer/dac44845 [7024x4683].png' \
 	--keyhlcolor=3498DBFF \
 	--bshlcolor=95A5A6FF \
 	--insidecolor=00000000 \
