some more edits

--- a/i3/config
+++ b/i3/config
@@ -17,6 +17,8 @@ set $mod Mod4
 new_window 1pixel
 hide_edge_borders both
 
+for_window [class=".*"] border pixel 0
+
 gaps outer 0
 gaps inner 15
 smart_gaps on
