--- a/rofi/config
+++ b/rofi/config
@@ -1,11 +1,18 @@
-! ------------------------------------------------------------------------------
-! ROFI Color theme
-! ------------------------------------------------------------------------------
+! Enable the extended coloring options
 rofi.color-enabled: true
+!                  bg       border   separator
+rofi.color-window: #1c1c22, #3e646f, #3e646f
+!                  bg       fg       bg-alt   hl-bg    hl-fg
+rofi.color-normal: #1c1c22, #bcbcbc, #1c1c22, #3e646f, #bcbcbc
+rofi.color-active: #1c1c22, #bcbcbc, #1c1c22, #3e646f, #bcbcbc
+rofi.color-urgent: #1c1c22, #bcbcbc, #1c1c22, #3e646f, #bcbcbc
 
 rofi.font: Dejavu Sans Mono 22
-
+rofi.separator-style: solid
+rofi.sidebar-mode: true
 rofi.lines: 10
 rofi.columns: 2
-
-rofi.theme: /usr/share/rofi/themes/Pop-Dark.rasi
+rofi.bw: 1
+rofi.padding: 5
+rofi.fixed-num-lines: true
+rofi.hide-scrollbar: true
